initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/Enrolled_Site_Research_Candidate__c.object-meta.xml
<CustomObject>
    <label>Enrolled Site Research Candidate</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>Enrolled Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolled Site Research Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>