initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/CRO_Agent_LLM_Repsonse__c.field-meta.xml
<CustomField>
    <fullName>CRO_Agent_LLM_Repsonse__c</fullName>
    <label>CRO Agent LLM Repsonse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>