initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Eligibility_Check_Stage__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Check_Stage__c</fullName>
    <label>Eligibility Check Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>