initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Enrolled_Site__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site__c</fullName>
    <label>Enrolled Site</label>
    <referenceTo>Enrolled_Site__c</referenceTo>
    <relationshipLabel>Enrolled Site Research Candidates</relationshipLabel>
    <relationshipName>Enrolled_Site_Research_Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>