initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Enrolled_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site_Name__c</fullName>
    <formula>Enrolled_Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Site Name</label>
    <type>Text</type>
</CustomField>