initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Enrolled_Site_Research_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site_Research_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled Site Research Candidate</label>
    <referenceTo>Enrolled_Site_Research_Candidate__c</referenceTo>
    <relationshipLabel>Enrolled Site Research Candidates</relationshipLabel>
    <relationshipName>Enrolled_Site_Research_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>