initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Has_Eligibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Has_Eligibility_Score__c</fullName>
    <formula>NOT(ISBLANK(Eligibility_Score__c))</formula>
    <label>Has Eligibility Score</label>
    <type>Checkbox</type>
</CustomField>