initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <label>Patient Email</label>
    <type>Email</type>
</CustomField>