initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/PCP_Agent_Prompt_Response__c.field-meta.xml
<CustomField>
    <fullName>PCP_Agent_Prompt_Response__c</fullName>
    <label>PCP Agent Prompt Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>