initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Site_Agent_LLM_Response__c.field-meta.xml
<CustomField>
    <fullName>Site_Agent_LLM_Response__c</fullName>
    <label>Site Agent LLM Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>