initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Initial Check</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Trial In-Progress</fullName>
            </value>
            <value>
                <fullName>Trial Complete</fullName>
            </value>
            <value>
                <fullName>Initial Check Cleared</fullName>
            </value>
            <value>
                <fullName>Rejected After Shortlisted</fullName>
            </value>
            <value>
                <fullName>Initial Check Failed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Invite Sent for Enrollment</fullName>
            </value>
            <value>
                <fullName>Enrollment Accepted</fullName>
            </value>
            <value>
                <fullName>Enrollment Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>