initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/recordTypes/Enrolled.recordType-meta.xml
<RecordType>
    <fullName>Enrolled</fullName>
    <active>true</active>
    <label>Enrolled</label>
</RecordType>