initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/recordTypes/Pre_Enrolled.recordType-meta.xml
<RecordType>
    <fullName>Pre_Enrolled</fullName>
    <active>true</active>
    <label>Pre-Enrolled</label>
</RecordType>