initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrolled_Site__c</columns>
    <columns>Patient__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Eligibility_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>