initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/listViews/Enrolled.listView-meta.xml
<ListView>
    <fullName>Enrolled</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Enrolled_Site__c</columns>
    <columns>Patient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enrolled_Site_Research_Candidate__c.Enrolled</value>
    </filters>
    <label>Enrolled</label>
</ListView>