initialSetup/main/default/objects/Enrolled_Site_Research_Candidate__c/listViews/Pre_Enrolled.listView-meta.xml
<ListView>
    <fullName>Pre_Enrolled</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enrolled_Site_Research_Candidate__c.Pre_Enrolled</value>
    </filters>
    <label>Pre-Enrolled</label>
</ListView>